# advent-of-code

./: .gitignore
python/: README.md  pyproject.toml
python/2022/: problem_01.py  problem_02.py  problem_03.py  problem_04.py  problem_05.py  problem_06.py  problem_07.py  problem_08.py  problem_09.py  problem_10.py  problem_11.py  problem_12.py  problem_13.py  problem_14.py  problem_15.py  problem_16.py  problem_17.py  problem_18.py  problem_19.py  problem_20.py  problem_21.py  problem_22.py  problem_23.py  problem_24.py  problem_25.py
python/aoc/: __init__.py  run.py  utils.py
