[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Jordan Van Aalsburg <jordan.vanaalsburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colored = "^1.4.4"
tabulate = "^0.9.0"
tqdm = "^4.65.0"
typer = {extras = ["all"], version = "^0.7.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
